
lib_LIBRARIES = \
	libapplecore.a

libapplecore_a_SOURCES = \
	c-io-unit.cpp \
	c-io-unit.hpp \
	c-memory.cpp \
	c-memory.hpp \
	c-observable.cpp \
	c-observable.hpp \
	c-observer.hpp \
	c-processor.cpp \
	c-processor.hpp \
	c-processor6502.cpp \
	c-processor6502.hpp \
	busses/c-io-rom-bus.cpp \
	busses/c-io-rom-bus.hpp \
	busses/c-language-card-bus.cpp \
	busses/c-language-card-bus.hpp \
	busses/c-main-memory-bus.cpp \
	busses/c-main-memory-bus.hpp \
	busses/c-slot-rom-bus.cpp \
	busses/c-slot-rom-bus.hpp \
	units/c-disk-unit.cpp \
	units/c-disk-unit.hpp \
	units/c-game-unit.cpp \
	units/c-game-unit.hpp \
	units/c-graphic-mode-unit.cpp \
	units/c-graphic-mode-unit.hpp \
	units/c-io-rom-unit.cpp \
	units/c-io-rom-unit.hpp \
	units/c-keyboard-unit.cpp \
	units/c-keyboard-unit.hpp \
	units/c-language-card-unit.cpp \
	units/c-language-card-unit.hpp \
	units/c-slots-unit.cpp \
	units/c-slots-unit.hpp \
	units/c-speaker-unit.cpp \
	units/c-speaker-unit.hpp \
	units/c-text-mode-unit.cpp \
	units/c-text-mode-unit.hpp \
	units/c-unit.cpp \
	units/c-unit.hpp \
	models/c-computer-core.cpp \
	models/c-computer-core.hpp \
	models/c-apple2e-core.cpp \
	models/c-apple2e-core.hpp \
	types.h


## File created by the gnome-build tools

