
lib_LIBRARIES = \
	libapplehardware.a

libapplehardware_a_SOURCES = \
	video/c-charset.cpp \
	video/c-charset.hpp \
	video/c-gr-renderer.cpp \
	video/c-gr-renderer.hpp \
	video/c-graphic-mode-renderer.cpp \
	video/c-graphic-mode-renderer.hpp \
	video/c-main-video-output.cpp \
	video/c-main-video-output.hpp \
	video/c-hgr-renderer.cpp \
	video/c-hgr-renderer.hpp \
	video/c-text-mode-renderer.cpp \
	video/c-text-mode-renderer.hpp \
	video/c-text-renderer.cpp \
	video/c-text-renderer.hpp \
	video/c-video-output.cpp \
	video/c-video-output.hpp \
	video/c-video-renderer.cpp \
	video/c-video-renderer.hpp \
	models/c-apple2e-hardware.cpp \
	models/c-apple2e-hardware.hpp \
	models/c-computer-hardware.cpp \
	models/c-computer-hardware.hpp \
	cards/c-card.cpp \
	cards/c-card.hpp \
	cards/c-disk-controler-card.cpp \
	cards/c-disk-controler-card.hpp \
	c-clock.cpp \
	c-clock.hpp \
	c-cycle-and-wait-clock.cpp \
	c-cycle-and-wait-clock.hpp \
	c-carry-clock.cpp \
	c-carry-clock.hpp \
	c-keyboard.hpp \
	c-keyboard.cpp \
	c-disk-drive.hpp \
	c-disk-drive.cpp \
	c-floppy-disk.hpp \
	c-floppy-disk.cpp \
	c-paddles.cpp \
	c-paddles.hpp \
	c-speaker.cpp \
	c-speaker.hpp \
	gcr.cpp \
	gcr.h

libapplehardware_a_LIBDADD = \
	core/libapplecore.a
	
## File created by the gnome-build tools

